# python-slam

./: .editorconfig  .env.multi  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_FINAL.md  DEFENSE_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  README_clean.md  TODO.md  configure.py  docker-compose.yml  install.sh  package.xml  python_slam_main.py  requirements.txt  run-multi.sh  setup.py  test-multi.sh  test_slam_modules.py  validate_system.py
.copilot/: config.json  custom_prompts.md
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yml  code-review.yml  config.yml  feature-request.yml
.github/prompts/: README.md  prompt-library.yml
.github/prompts/api/: graphql-design.md  rest-api-design.md
.github/prompts/architecture/: microservices-design.md  system-design.md
.github/prompts/code-review/: comprehensive-review.md  performance-review.md  security-review.md
.github/prompts/development/: debugging.md  refactoring.md
.github/prompts/generation/: api-generation.md  specification-to-code.md
.github/prompts/legacy/: dependency-upgrade.md  modernization-strategy.md
.github/prompts/optimization/: algorithm-optimization.md  database-optimization.md
.github/prompts/testing/: tdd-development.md  test-automation.md
.github/scripts/: claude-prompt.sh  update-prompts.sh
.github/workflows/: build.yml  deploy.yml.disabled  test.yml  test.yml.disabled
config/: cyclonedx.xml  multi_slam_rviz.rviz  pyslam_config.yaml  slam_params.yaml
docker/: Dockerfile.backend  Dockerfile.visualization  cyclonedx.xml  docker-compose.multi.yml  entrypoint.sh
docs/: MULTI_CONTAINER_ARCHITECTURE.md  PROJECT_GOALS.md  PROJECT_STRUCTURE.md  README.md  competition_missions.md  installation.md  project_plan.md  python_slam_overview.md  ros2_vs_slam_comparison.md  setup_instructions.md  slam_algorithm_choices.md  testing_strategy.md  troubleshooting.md
docs/api/: README.md
docs/archive/: README_NEW.md  README_backup.md
docs/configuration/: SCM-Software-Configuration-Management.md  version-history.md
docs/design/: SDD-Software-Design-Document.md
docs/procedures/: coding-standards.md
docs/requirements/: SRD-Software-Requirements-Document.md  requirements-traceability-matrix.md
docs/testing/: STP-Software-Test-Plan.md
launch/: defense_slam_launch.py  multi_slam_launch.py  slam_backend_launch.py  slam_launch.py
rviz/: slam_config.rviz
scripts/: build_ros2.sh  dev.sh  install.sh  launch_slam.sh  run-multi.sh  setup.sh  setup_dev.sh  test-multi.sh  test_pyslam_integration.py  test_pyslam_standalone.py
src/: autonomous_flight.py  basic_slam_pipeline.py  bonus_engineering.py  drone_slam_example.py  feature_extraction.py  flight_integration.py  localization.py  loop_closure.py  mapping.py  pose_estimation.py  python_slam_main.py
src/python_slam/: __init__.py  basic_slam_pipeline.py  enhanced_visualization_node.py  feature_extraction.py  feature_extraction_node.py  flight_integration.py  flight_integration_node.py  localization.py  localization_node.py  loop_closure.py  loop_closure_node.py  mapping.py  mapping_node.py  pose_estimation.py  pose_estimation_node.py  px4_bridge_node.py  pyslam_config.py  pyslam_integration.py  slam_node.py  uci_interface_node.py  visualization_bridge.py
src/python_slam/benchmarking/: __init__.py  benchmark_metrics.py  benchmark_runner.py
src/python_slam/embedded_optimization/: __init__.py  arm_optimization.py
src/python_slam/gpu_acceleration/: __init__.py  accelerated_operations.py  cuda_acceleration.py  gpu_detector.py  gpu_manager.py  metal_acceleration.py  rocm_acceleration.py
src/python_slam/gui/: __init__.py  control_panels.py  main_window.py  metrics_dashboard.py  slam_visualizer.py  utils.py  visualization.py
src/python_slam/px4_integration/: px4_interface.py
src/python_slam/ros2_nav2_integration/: __init__.py  nav2_bridge.py
src/python_slam/slam_interfaces/: __init__.py  multi_slam_node.py  slam_factory.py  slam_interface.py
src/python_slam/uci_integration/: uci_interface.py
tests/: README.md  comprehensive_test_report.json  performance_baseline.json  run_tests.py  test_basic_slam_pipeline.py  test_benchmarking.py  test_comprehensive.py  test_data.db.backup  test_feature_extraction.py  test_framework.py  test_gpu_acceleration.py  test_gui_components.py  test_integration.py  test_launcher.py  test_mapping.py  test_placeholder.py  test_pose_estimation.py
tools/validation/: configure.py
(+6 files in other folders)
