<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>python_slam</name>
    <version>1.0.0</version>
    <description>Advanced Python SLAM package for aerial drone competitions with ROS 2 integration
        and defense-oriented capabilities</description>

    <maintainer email="developer@python-slam.org">Python SLAM Team</maintainer>
    <license>MIT</license>

    <url type="website">https://github.com/your-username/python-slam</url>
    <url type="bugtracker">https://github.com/your-username/python-slam/issues</url>
    <url type="repository">https://github.com/your-username/python-slam</url>

    <author email="developer@python-slam.org">Python SLAM Team</author>

    <!-- Build dependencies -->
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- Runtime dependencies -->
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>visualization_msgs</depend>
    <depend>std_msgs</depend>

    <!-- Python dependencies -->
    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-scipy</exec_depend>
    <exec_depend>python3-matplotlib</exec_depend>
    <!-- Defense-oriented dependencies -->
    <exec_depend>python3-pyqt5</exec_depend>
    <exec_depend>python3-zmq</exec_depend>
    <exec_depend>python3-asyncio</exec_depend>

    <!-- Test dependencies -->
    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
